[S12P31A202-776] refactor: Remove unused code and fix static analysis issues